--- a/zjuthesis.tex
+++ b/zjuthesis.tex
@@ -19,13 +19,13 @@
     % Layout Settings
     TwoSide         = true,             % set to false if don't need empty pages
     % Thesis Info
-    StudentName     = 姓名,
-    StudentID       = 学号,
-    AdvisorName     = 指导教师,
-    Grade           = 2014,            % only the year, no '级'
-    Major           = 专业,
-    Department      = 学院,
-    SubmitDate      = 递交日期,
+    StudentName     = 金沈尧,
+    StudentID       = 3190100529,
+    AdvisorName     = 石战结,
+    Grade           = 2019,            % only the year, no '级'
+    Major           = 地质学（求是科学班）,
+    Department      = 地球科学学院,
+    SubmitDate      = TBC,
     MajorFormat     = general,
     Degree          = undergraduate,   % 'undergraduate' or 'graduate'
     Type            = thesis,          % 'thesis'   or 'design'
@@ -37,12 +37,12 @@
     Topic           = 研究方向,
     ColaboratorName = 合作导师,
     % Title
-    Title           = 毕业论文/设计题目,
+    Title           = 浅地表地质目标地球物理探测数据的聚类联合反演成像,
     TitleEng        = {{Graduation Thesis Title}}
 ]{zjuthesis}
 
 %% Uncomment the following lines if you need multi line titles on cover pages
-% \titletwolines{毕业论文题目第一行}{毕业论文题目第二行}
+\titletwolines{浅地表地质目标地球物理探测数据的}{聚类联合反演成像}
 % \titleengtwolines{English Title Line One}{Englisht Title Line Two}
 
 %% Uncomment the following lines if you need multi line department names on cover pages
