--- a/body/undergraduate/final/2-body.tex
+++ b/body/undergraduate/final/2-body.tex
@@ -25,6 +25,14 @@
     \caption{\label{fig:zju-logo}浙江大学LOGO}
 \end{figure}
 
+\subsubsection{小节标题2}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=.4\linewidth]{logo/zju}
+    \caption{\label{fig:zju-logo}浙江大学LOGO}
+\end{figure}
+
 \par 如\autoref{tab:sample}所示，这是一张自动调节列宽的表格。
 
 \begin{table}[ht]
