--- a/body/undergraduate/proposal/translation/translation.tex
+++ b/body/undergraduate/proposal/translation/translation.tex
@@ -1,4 +1,5 @@
 \cleardoublepage
+\newrefsection
 \chapter{外文翻译}
 
 \section{摘要}
@@ -50,16 +51,17 @@
 
 如果我们在同一位置进行地震折射实验并仅从这些测量中确定一组允许的解决方案，我们将得到图3 所示的 结果。在这种情况下，地震折射数据也显示出模糊性以及速度和速度的范围解释假设误差内观察结果的厚度值。 然而，与大地电磁方法相比，可能的厚度值范围更窄，在30到 45m 之间。联合反演的核心思想是在两种方法感知相同结构的假设下，找到解释两个数据集的模型将导致更好地恢复这些 结构。现在，我将讨论最常用的假设，并通过这些简单的示例演示如何使用它们、可以期待什么样的改进以及存在 哪些缺陷。
 
+
 \subsection{结构耦合}
 
 关于不同地球物理方法之间的关系，我们可以做出的最普遍的假设之一是它们感知地球内部的相同地质结构，特 别是它们的边界。因此，如果有任何速度或电阻率异常，它们应该发生在同一位置。因此，结构联合反演方法不规定 不同物理参数之间的任何直接相关性，而是使用这些参数变化之间的空间关系来耦合不同的方法（Haber 和 Oldenburg，1997； Gallardo 和 Meju，2003）。我将在下面的案例研究中讨论联合反演中常用的不同结构 关系的一些例子。对于分层地球，一个简单的结构关系是假设所有方法的反演中的层边界都处于相同深度（例如， Manglik 和Verma，1998； Moorkamp等，2007；泽瓦洛斯等。 2009; Moorkamp 等。2010; Roux 等，2011; Juhojuntti 和Kamm，2015）。图4显示了假设边界重合时我们的简单示例的两个数据集的可接受模型范围。
 
-\begin{figure}[H]
+\begin{figure}
     \centering
     \includegraphics[width=0.9\textwidth]{trans/trans_4.png}
-    \caption[3.1.1]{一组可接受的速度-厚度（左）和电阻率-厚度（右）组合，用于单独反演和联合反演，具有基于重合层厚度的结构约束。单 独反演的可接受模型标记为绿色，而联合反演模型标记为蓝色}
-\end{figure}
+    \caption{一组可接受的速度-厚度（左）和电阻率-厚度（右）组合，用于单独反演和联合反演，具有基于重合层厚度的结构约束。单 独反演的可接受模型标记为绿色，而联合反演模型标记为蓝色}
 
+\end{figure}
 
 由于没有采用电阻率和速度之间的关系，因此这种方法主要限制了允许的层厚度范围。鉴于大地电磁数据的这个范围较大，允许的电阻率模型的范围减小，而可接受的地震模型的范围与单独的分析相同。总的来说，结构耦 合实现了联合反演的主要目标，以减少可接受模型的范围，即使在这种情况下仅针对一个参数子集。显然，对于更为实际的反演，即假设地球是分层的，情况也会更加复杂。当同时反演所有三层的属性时，不同层的厚度和物理参 数之间存在显着的相互作用。例如，大地电磁数据对顶层厚度具有合理的敏感性，该信息将有助于约束地震模型， 进而有助于约束第二层的厚度。因此，在现实世界的联合反演中，并不总是那么清楚哪种方法主导分辨率属性，并 且在许多情况下，不同的方法驱动模型域不同部分的反演（Jegen 等，2009 ； Heincke 等，2009 ）。 2014； Demirci 等， 2017 ）。我将在应用部分讨论其中的一些问题；现在我将继续这个简单的 例子，因为它提取了联合反演的许多重要方面。
 
@@ -72,4 +74,3 @@
 \subsection{基于参数关系耦合}
 
 通过结构耦合方法不对不同地球物理方法之间的关系做出强假设，因此具有广泛的适用性。正如示例所示，与单独的反 演相比，这样做的结果可以适度提高分辨率。如果我们在反演中利用更多关于地球的信息，我们可能会显着改善 我们的结果。这通常适用于所有逆向方法，额外的先验信息限制了可接受模型的空间，但存在使解决方案产生偏差 的风险（Tarantola   2004；   Mosegaard  和   Hansen  2016）。
-
