--- a/body/undergraduate/proposal/review/review.tex
+++ b/body/undergraduate/proposal/review/review.tex
@@ -11,11 +11,27 @@
 
 \section{国内外研究现状}
 
-
 \subsection{研究方向及进展}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=.2\linewidth]{logo/zju}
+    \caption{\label{fig:zju-logo}浙江大学LOGO}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=.2\linewidth]{logo/zju}
+    \caption{\label{fig:zju-logo1}浙江大学LOGO}
+\end{figure}
 
 \subsection{存在问题}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=.2\linewidth]{logo/zju}
+    \caption{\label{fig:zju-logo2}浙江大学LOGO}
+\end{figure}
 
 \section{研究展望}
 
