--- a/body/undergraduate/proposal/original/original.tex
+++ b/body/undergraduate/proposal/original/original.tex
@@ -3,13 +3,11 @@
 
 % Insert pdf version of original document
 % Place the pdf under `/figure/`
-
-
 \begin{center}
     \includepdf[
-        pages=1-3,
+        pages=1-28,
         scale=0.75,
         pagecommand={\pagestyle{fancy}},
         frame, % remove this line if you don't want outer fram of pdf
-    ]{rules2018.pdf}
+    ]{origin.pdf}
 \end{center}
