--- a/zjuthesis.tex
+++ b/zjuthesis.tex
@@ -25,7 +25,7 @@
     Grade           = 2019,            % only the year, no '级'
     Major           = 地质学（求是科学班）,
     Department      = 地球科学学院,
-    SubmitDate      = TBC,
+    SubmitDate      = TBD,
     MajorFormat     = general,
     Degree          = undergraduate,   % 'undergraduate' or 'graduate'
     Type            = thesis,          % 'thesis'   or 'design'
