--- a/body/undergraduate/proposal/proposal/background.tex
+++ b/body/undergraduate/proposal/proposal/background.tex
@@ -20,6 +20,6 @@ Zhdanov等研究一种不需要Gramian约束的地球物理数据联合反演，
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.9\textwidth]{trans/trans_1.png}
-    \caption[]{联合反演算法（左）和协同反演算法（右）的简化流程图（Moorkamp等， 2016 b）。两种方法之间的主要区 别在于，对于协同反演，进入耦合约束的一个量（此处地震速度 v）在整个反演过程中不会发生变化，而所有量都在联合反演中进行调整} \label{ktbg1}
+    \includegraphics[width=0.9\textwidth]{ktbg/1.png}
+    \caption[]{黑点显示从钻入海洋盐丘的钻孔测得的电阻率和地震速度值（Moorkamp 等人，2013 年）。 绿点是从大地电磁和地震数据的单独反演中恢复的物理属性值。 蓝点标记了使用交叉梯度法从联合反演中恢复的电阻率和速度值（Moorkamp 等，2013）} \label{ktbg1}
 \end{figure}
